--- a/group-project-app/src/app/home/home.component.html
+++ b/group-project-app/src/app/home/home.component.html
@@ -42,6 +42,7 @@
       </div>
     </div>
   
+    <app-income-form></app-income-form> <!-- Componente de formulario de ingresos -->
     <!-- Navigation -->
     <app-navigation></app-navigation> <!-- Componente de navegación -->
   </div>
