--- a/group-project-app/src/app/navbar/navigation.component.html
+++ b/group-project-app/src/app/navbar/navigation.component.html
@@ -1,19 +1,14 @@
 <div class="navigation">
-    <button class="nav-button">
-      <i class="icon-home"></i>
-      Inicio
-    </button>
-    <button class="nav-button">
-      <i class="icon-transactions"></i>
-      Transacciones
-    </button>
-    <button class="nav-button">
-      <i class="icon-budget"></i>
-      Presupuestos
-    </button>
-    <button class="nav-button">
-      <i class="icon-more"></i>
-      Más
-    </button>
-  </div>
-  
+  <a class="nav-button flex-1" href="/home">
+    <i class="icon-home"></i>
+    Inicio
+  </a>
+  <a class="nav-button flex-1"  href="/transactions">
+    <i class="icon-transactions"></i>
+    Transacciones
+  </a>
+  <a class="nav-button flex-1" href="/presupuestos">
+    <i class="icon-budget"></i>
+    Presupuestos
+  </a>
+</div>
