--- a/group-project-app/src/app/transaction-table/transaction-table.component.html
+++ b/group-project-app/src/app/transaction-table/transaction-table.component.html
@@ -1,4 +1,4 @@
-<div class="w-full lg:w-2/3 bg-gray-800 p-6 rounded-lg shadow-lg">
+<div class="flex-1 flex flex-col bg-gray-800 p-6 rounded-lg shadow-lg">
     <h2 class="text-2xl font-semibold mb-4">Transacciones</h2>
     <table class="min-w-full table-auto">
       <thead>
